// -------------------------------------------------------------
// TABELAS DE CONTROLADORIA 
// Enums foram substituído por tabelas
// -------------------------------------------------------------
Table papel_usuario {
  id int [pk, increment]
  nome varchar [unique, note: 'ADMINISTRADOR, GESTOR, PROFESSOR, ANALISTA']
  descricao text
}
Table usuario {
  id int [pk]
  nome varchar
  email varchar [unique]
  senhaHash varchar
  senhaValidade date
  papelId int [ref: > papel_usuario.id] // Relacionamento com tabela 'papel_usuario'
  local_trabalho_Id int [ref: > local_trabalho_usuario.id] // Relacionamento com tabela 'local_trabalho_usuario'
  ativo boolean [default: true]
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}
Table local_trabalho_usuario {
  id int [pk, increment]
  descricao text
  logradouro varchar  
  numero varchar
  complemento varchar
  bairro varchar
  cep varchar
  cidade_ibge varchar
  cidade_nome varchar
  estado_ibge varchar
  estado_nome varchar
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table log_auditoria {
  id int [pk]
  usuarioId int [ref: > usuario.id] // Relacionamento com tabela 'usuário'
  acao varchar
  entidade varchar
  registroId varchar
  campos json
  origemIp varchar
  criadoEm timestamp [default: `now()`]
}

// -------------------------------------------------------------
// TABELAS DE ALUNO/EX-ALUNO
// -------------------------------------------------------------
Table aluno {
  id int [pk]
  entidadeEnsinoId int [ref: > entidade_ensino.id]              // Relacionamento com tabela 'aluno'
  cpf varchar [unique]
  nomeCompleto varchar
  email varchar
  dataNascimento datetime
  genero varchar
  corRaca varchar
  formacaoPrevia varchar
  anonimizacao_situacao_id int [ref: > anonimizacao_situacao.id]
  anonimizacao_prevista_data date
  anonimizacao_executada_data timestamp
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table anonimizacao_situacao {
  id int [pk]
  descricao varchar [note: 'ATIVO, EXPIRADO, CONCLUÍDO, RETIDO']
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table telefone {
  id int [pk]
  alunoId int [ref: > aluno.id]              // Relacionamento com tabela 'aluno'
  descricao varchar
  telefone varchar  
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table endereco {
  id int [pk]
  alunoId int [ref: > aluno.id]              // Relacionamento com tabela 'aluno'
  descricao varchar
  logradouro varchar  
  numero varchar
  complemento varchar
  bairro varchar
  cep varchar
  cidade_ibge varchar
  cidade_nome varchar
  estado_ibge varchar
  estado_nome varchar
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table entidade_ensino {
  id int [pk]
  descricao varchar
  logradouro varchar  
  numero varchar
  complemento varchar
  bairro varchar
  cep varchar
  cidade_ibge varchar
  cidade_nome varchar
  estado_ibge varchar
  estado_nome varchar
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table status_matricula {
  id int [pk, increment]
  nome varchar [unique, note: 'INSCRITO, MATRICULADO, ATIVO, EVADIDO, CONCLUIDO']
  descricao text
}

Table matricula {
  id int [pk]
  alunoId int [ref: > aluno.id]              // Relacionamento com tabela 'aluno'
  ofertaTurmaId int [ref: > oferta_turma.id] // Relacionamento com tabela 'oferta_turma'
  statusId int [ref: > status_matricula.id]      // Relacionamento com tabela 'status_matricula'
  notaFinal float
  frequenciaFinal float
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
  Indexes {(alunoId, ofertaTurmaId) [unique]}
}

Table indicador_matricula {
  id int [pk]
  matriculaId int [ref: > matricula.id] // Relacionamento com tabela 'matricula'
  moduloNome varchar
  nota float
  frequencia float
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

// -------------------------------------------------------------
// TABELAS DE CURSOS
// -------------------------------------------------------------
Table curso {
  id int [pk]
  nome varchar
  programa varchar
  projeto varchar
  tecnologia varchar
  cargaHoraria int
  ativo boolean [default: true]
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table oferta_turma {
  id int [pk]
  cursoId int [ref: > curso.id] // Relacionamento com tabela 'curso'
  codigoTurma varchar
  ciclo varchar
  ano int
  semestre int
  trilha varchar
  ativa boolean [default: true]
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

// -------------------------------------------------------------
// TABELAS DE EGRESSO
// -------------------------------------------------------------
Table egresso {
  id int [pk]
  alunoId int [unique, ref: - aluno.id]       // Relacionamento com tabela 'aluno'
  situacaoId int [ref: > situacao_egresso.id] // Relacionamento com tabela 'situacao_egresso'
  ultimaReview datetime
  criadoEm timestamp [default: `now()`]
  atualizadoEm timestamp
}

Table situacao_egresso {
  id int [pk, increment]
  nome varchar [unique, note: 'EMPREGADO_NA_AREA, EMPREGADO_FORA_DA_AREA, EMPREENDENDOR, CONTINUIDADE_ACADEMICA, PROJETO_DERIVADO, SEM_INFORMACAO, etc.']
  descricao text
}

Table indicador_egresso {
  id int [pk]
  egressoId int  
  metrica varchar
  valor   varchar
  dataReferência timestamp
}
Ref: indicador_egresso.egressoId > egresso.id [delete: cascade] // O símbolo '>' indica Muitos-para-Um

Table vinculo_profissional {
  id int [pk]
  egressoId int
  tipo varchar
  url  varchar
}
Ref: vinculo_profissional.egressoId > egresso.id [delete: cascade]

Table evidencia_impacto {
  id int [pk]
  egressoId int
  tipo varchar
  titulo varchar
  descricao varchar
  linkPublico varchar
  dataOcorrencia timestamp
}
Ref: evidencia_impacto.egressoId > egresso.id [delete: cascade]
